--- a/spring-boot-app/Dockerfile
+++ b/spring-boot-app/Dockerfile
@@ -11,7 +11,7 @@ COPY . .
 RUN chmod +x ./gradlew
 
 # Build the project and skip tests, disable file system watching
-RUN ./gradlew build -x test
+RUN ./gradlew :spring-boot-app:build -x test
 
 # Use OpenJDK for base image
 FROM openjdk:17-jdk-slim
@@ -20,7 +20,7 @@ FROM openjdk:17-jdk-slim
 WORKDIR /app
 
 # Copy the JAR file from the build stage
-COPY --from=build /home/gradle/project/build/libs/*.jar app.jar
+COPY --from=build /home/gradle/project/spring-boot-app/build/libs/*.jar app.jar
 
 # Run the application
 ENTRYPOINT ["java", "-jar", "/app/app.jar"]
