Update .gitignore to ignore vscode files
The .gitignore file was updated to ignore all files in the .vscode directory, instead of just the settings.json file. This change will prevent accidental commits of any unnecessary files generated by the Visual Studio Code IDE.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Ignore intellij-IDE files.
 .idea/
 
+# Ignore vscode files.
+.vscode/
+
 # Ignore angular-cli folders and build folders with generated files.
 node_modules/
 .angular/
@@ -15,4 +18,3 @@ gen/
 
 # Ignore gradle generated files.
 .gradle/
-.vscode/settings.json
