--- a/frontend/build.gradle
+++ b/frontend/build.gradle
@@ -1,28 +1,44 @@
 plugins {
-    id 'com.moowork.node' version '1.3.1'
+    id  'com.github.node-gradle.node' version '3.0.1'
+}
+
+repositories {
+  mavenCentral()
+  ivy {
+    url 'https://nodejs.org/dist/'
+    patternLayout {
+      artifact '[revision]/[artifact](-v[revision]-[classifier]).[ext]'
+    }
+    metadataSources {
+      artifact()
+    }
+    content {
+      includeGroup 'org.nodejs'
+    }
+  }
 }
 
 node {
-    version = '14.17.1'
-    npmVersion = '6.14.13'
+    version = '22.14.0'
+    npmVersion = '10.9.2'
     download = true
 }
 
-task installDependencies(type: NpmTask) {
+task installDependencies(type: com.github.gradle.node.npm.task.NpmTask) {
     args = ['install']
 }
 
-task ngBuild(type: NpmTask) {
+task ngBuild(type: com.github.gradle.node.npm.task.NpmTask) {
     dependsOn installDependencies
     args = ['run', 'build']
 }
 
-task ngTest(type: NpmTask) {
-    dependsOn installDependencies
-    args = ['run', 'test']
+task ngTest(type: com.github.gradle.node.npm.task.NpmTask) {
+  dependsOn installDependencies
+  args = ['run', 'test', '--', '--watch=false']
 }
 
-task ngServe(type: NpmTask) {
+task ngServe(type: com.github.gradle.node.npm.task.NpmTask) {
     dependsOn installDependencies
     args = ['run', 'start']
 }
