--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -5,4 +5,11 @@ server {
         index index.html index.htm;
         try_files $uri $uri/ /index.html =404;
     }
+    location /api/ {
+        proxy_pass http://spring-boot-app:8080/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
 }
