--- a/build.gradle
+++ b/build.gradle
@@ -1,20 +1,6 @@
 allprojects {
-    apply plugin: 'java'
     apply plugin: 'idea'
 
-    group 'com.example'
+    group 'org.example'
     version '1.0-SNAPSHOT'
-
-    repositories {
-        mavenCentral()
-    }
-
-    tasks.withType(JavaCompile) {
-        options.encoding = 'UTF-8'
-    }
-}
-
-subprojects {
-    sourceCompatibility = '17'
-    targetCompatibility = '17'
 }
