--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   mariadb:
-    image: mariadb
+    image: mariadb:11.7.2
     environment:
       - MYSQL_ROOT_PASSWORD=root
       - MYSQL_DATABASE=demo
