--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - MYSQL_DATABASE=demo
     volumes:
       - mysql:/var/lib/mysql
+    #    ports:
+    #      - "3306:3306"
     networks:
       - app_network
 
