Migrated to reactive rest service - Moved away from spring web with jpa, hibernate and jdbc to spring webflux with r2dbc and migration scripts - Migrated CrudRepository to CoroutineCrudRepository - Adapted Rest controllers and services to suspend fun's

--- a/spring-boot-app/src/main/resources/application.yml
+++ b/spring-boot-app/src/main/resources/application.yml
@@ -2,22 +2,18 @@ spring:
   application:
     name: angular-demo
 
-  datasource:
-    driverClassName: org.mariadb.jdbc.Driver
-    url: jdbc:mariadb://mariadb:3306/demo
-    username: root
+  r2dbc:
+    name: demo
     password: root
+    username: root
+    url: r2dbc:mariadb://mariadb:3306/demo
 
-  jpa:
-    generate-ddl: true
-    hibernate:
-      ddl-auto: create-drop
-    show-sql: true
-    properties:
-      hibernate:
-        jdbc:
-          lob:
-            non_contextual_creation: true
+  sql:
+    init:
+      mode: always # Always initialize the database on startup
+      schema-locations: classpath:schema.sql # Path to your schema file
+      data-locations: classpath:data.sql # Optional: Path to your data file
+
 logging:
   level:
     org.example.angulardemo: DEBUG
