Finish unit tests for the product service

--- a/spring-boot-app/src/test/resources/application-test.yml
+++ b/spring-boot-app/src/test/resources/application-test.yml
@@ -7,3 +7,6 @@ spring:
     init:
       mode: always # Always initialize the database on startup
 
+logging:
+  level:
+    org.example.angulardemo: DEBUG
