Add user functionality - update data model - update entities/ DTO's and services - add necessary endpoint for retrieving users - update existing endpoints for products - add and update unit tests - update the api.http

--- a/spring-boot-app/src/test/resources/application-test.yml
+++ b/spring-boot-app/src/test/resources/application-test.yml
@@ -4,7 +4,8 @@ spring:
   sql:
     init:
       mode: always # Always initialize the database on startup
-
 logging:
   level:
-    org.example.angulardemo: DEBUG
+    org.example.angulardemo: debug
+
+
