--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,8 +8,30 @@ services:
     volumes:
       - mysql:/var/lib/mysql
     # Uncomment these lines to communicate with the database separately
-    #    ports:
-    #      - "3306:3306"
+    ports:
+      - "3306:3306"
+    networks:
+      - app_network
+
+  oauth2-proxy:
+    image: quay.io/oauth2-proxy/oauth2-proxy:latest
+    container_name: oauth2-proxy
+    environment:
+      OAUTH2_PROXY_HTTP_ADDRESS: "http://oauth2-proxy:4180"
+      OAUTH2_PROXY_PROVIDER: google
+      OAUTH2_PROXY_CLIENT_ID: "${OAUTH2_PROXY_CLIENT_ID}"
+      OAUTH2_PROXY_CLIENT_SECRET: "${OAUTH2_PROXY_CLIENT_SECRET}"
+      OAUTH2_PROXY_COOKIE_SECRET: "${OAUTH2_PROXY_COOKIE_SECRET}"
+      #      OAUTH2_PROXY_REVERSE_PROXY: true
+      #      OAUTH2_PROXY_SET_AUTHORIZATION_HEADER: true
+      #      OAUTH2_PROXY_SET_XAUTHREQUEST: true
+      #      OAUTH2_PROXY_COOKIE_SECURE: true
+      OAUTH2_PROXY_EMAIL_DOMAINS: "*"
+      #      OAUTH2_PROXY_COOKIE_DOMAIN: "*"
+      OAUTH2_PROXY_UPSTREAMS: "http://spring-boot-app:8080/"
+      OAUTH2_PROXY_REDIRECT_URL: "http://localhost:80/oauth2/callback"
+    depends_on:
+      - spring-boot-app
     networks:
       - app_network
 
@@ -33,7 +55,7 @@ services:
       dockerfile: Dockerfile
     depends_on:
       - spring-boot-app
-    # Normally, we only need to expose the frontend, since the nginx.conf routes to the backend via the app_network.
+    # Normally, we only need to expose the frontend, since the nginx.conf routes via the oauth2-proxy to the backend through the app_network.
     # This is preferable for safety concerns, i.e. reducing the attack surface.
     ports:
       - "80:80"
