--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -61,12 +61,14 @@
           "defaultConfiguration": "production"
         },
         "serve": {
+
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
               "buildTarget": "demo:build:production"
             },
             "development": {
+              "proxyConfig": "proxy.conf.json",
               "buildTarget": "demo:build:development"
             }
           },
