--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -6,10 +6,18 @@ server {
         try_files $uri $uri/ /index.html =404;
     }
     location /api/ {
-        proxy_pass http://spring-boot-app:8080/;
+        proxy_pass http://oauth2-proxy:4180/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
+    location /oauth2/ {
+        proxy_pass http://oauth2-proxy:4180/oauth2/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
 }
