--- a/spring-boot-app/src/main/resources/application.yml
+++ b/spring-boot-app/src/main/resources/application.yml
@@ -15,3 +15,9 @@ spring:
 logging:
   level:
     org.example.angulardemo: debug
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health
