--- a/frontend/server/server.tsconfig.json
+++ b/frontend/server/server.tsconfig.json
@@ -1,8 +1,18 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
     "module": "commonjs",
-    "lib": [
-      "es2017"
-    ]
-  }
+    "outDir": "./dist",
+    "rootDir": "./src",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
